# interaction-nets

./: .gitignore  0.bootstrap.js  bootstrap.js  index.html  links.txt
abstract-algorithm/: Cargo.toml  README.md
abstract-algorithm-demo/: Cargo.toml  LICENSE_MIT  shell.nix
abstract-algorithm-demo/src/: lib.rs
abstract-algorithm-demo/www/: index.html  index.js  package-lock.json  package.json
abstract-algorithm/examples/: list-fusion.lam  not-fusion.lam
abstract-algorithm/src/: ghost.rs  inet.rs  lambda.rs  lib.rs  main.rs
abstract-algorithm/src/cli/: main.rs
theory/: Inet.v  Makefile  Makefile.conf  Map.v  NOTES  _CoqProject
