[package]
name = "abstract-algorithm"
version = "0.1.0"
edition = "2021"

[lib]
name = "abstract_algorithm"
path = "src/lib.rs"

[[bin]]
name = "abstract_algorithm_cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cons-list = "0.0.3"
ghost-cell = "0.2.2"
nom = "7.1.1"
